tests/ui/implied-bounds/normalization-nested.lifetime.stderr
error[E0759]: `fn` parameter has lifetime `'x` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/normalization-nested.rs:35:20
   |
LL | pub fn test<'x>(_: Map<Vec<&'x ()>>, s: &'x str) -> &'static str {
   |                    ^^^^^^^^^^^^^^^^
   |                    |
   |                    this data with lifetime `'x`...
   |                    ...is used and required to live as long as `'static` here
   |
note: `'static` lifetime requirement introduced by this bound
  --> $DIR/normalization-nested.rs:33:14
   |
LL |     I::Item: 'static;
   |              ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0759`.
